--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@ a:hover {
 		
 	</ul>
 	<div class="note">
-	<p> you can also download my by clicking on the <a href="https://drive.google.com/file/d/12NDNbhr1CGag04WH4LKnDo9MzRbKj53c/view?usp=sharing">link here.<a><p>
+	<p> you can also download my resume by clicking on the <a href="https://drive.google.com/file/d/12NDNbhr1CGag04WH4LKnDo9MzRbKj53c/view?usp=sharing">link here.<a><p>
+		<p>Please use the desktop option in Chrome while viewing the website on mobile phones.</p>
 		</div>
 	<br>
 	<br>
