--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ a:hover {
 		<div class="about-content">
 			<p>Welcome all, I am Mahesh Kumar S from Chennai. I completed my upper secondary studies at St. Gabriel's School. And I had passed my bachelor degree in mathematics with flying colors. After that I am currently pursuing my Master degree in Cyber forensics and Information Security and also doing internships at NIELIT and Cyberhacks. I am interested in the field of cybersecurity.
 			</p>
-			<p>I am going to complete my Master degree next year in March. In order to showcase my talent, I planned to work in the cyberforensic field. To know more about me you can also download my resume by clicking on Name on the Home page. Contact me through the contact page as well.
+			<p>I am going to complete my Master degree next year in March. In order to showcase my talent, I planned to work in the cyberforensic field. To know more about me you can also download my resume by clicking on link on the Home page. Contact me through the contact page as well.
 			</p>
 			<span>Thank You</span>
 			<p>Click <a href="#home">here</a> to back to Home page</p>
